@@ -5,13 +5,26 @@ AUX slang-2.1.3-uclibc.patch 494 SHA256 7b88890ae8787617065d693f0469b2d462148964
 AUX slang-2.2.3-slsh-libs.patch 678 SHA256 820bb560dc76105756a0fa75661dd3cbf6fc6ecb7802dcbdb9fc4625de4ffb22 SHA512 62ce13a54178432463873e1f31e50bd47559ef0fff6c0a58497cfb908b055ea2f80d1af5d2c5bdafdf6e85e7c75d48bd0d39905977d1591e7559a285685a9b72 WHIRLPOOL 135fc5ea00fc3dcc7580753c5e9f02985762ecf758593728f273e8b252e3b86573ff50249cbb26d8da0678a7cd1fe965319e8bf9d7073c4158e57211c72bf707
 AUX slang-2.2.4-memset.patch 1054 SHA256 d389884d73811314a6dbdb6223a7241bca5abc97f8984eb4f238d327b30c1fad SHA512 ddbbd089c3d1128353951438fc527b6cc7e2268d5dc7384123fcf36dc198872a0cf229c850b3e6c1538807adaf3b426d3748f3ed2fd4b021080d5ebda30d56ee WHIRLPOOL b68492ca72f6ee35c28bde22fd87d8c33c85c47fcb820c9d17ec496301b7df46a4741e7baa9b3522b4142c9643a2942d8e619364039beba80cc9e59bb8131910
 DIST slang-2.2.4.tar.bz2 1427363 SHA256 9a8257a9a2a55099af858b13338dc8f3a06dd2069f46f0df2c9c3bb84a01d5db SHA512 aaf0dcea5f1583487732098bd9dfe47f4fd968d81783955f58ed7bbffb852c217cde8999f2a515d77c22d44efc79047fc841eea6fecc48f18b402461ce6a848f WHIRLPOOL 5a0c81ef103116733df952fec8593f476bd57c9b2799ee566b0bf93dfd465709ef5f565a369d89a92bfd13cfc7577a047c46116bcac2f0b3176e50556c7484e1
+EBUILD slang-2.2.4-r1.ebuild 2304 SHA256 6e38ed744881782f07e32615171bd6d5b7f1717a6b171cefb51bd4d18163613e SHA512 22e299e377302345598f9efffc1f6285784081f2256cc578884c4b379f6d77021072451535902264f8430b3039dcaabf084c5a11e5c5def47b1ac096de1f68c3 WHIRLPOOL a6a4d82c1ee9a0adc23281971b20ba0e29a74a487b7a446d1551cba6e7e0cdb04c90655f54d670ec5c77512bc0c9c1bef77bc390bf659b090b219b69380696de
 EBUILD slang-2.2.4.ebuild 1901 SHA256 afac0414793784223c70f9d8c56c5551329b6c13c066c0e01e503d2b991741e6 SHA512 eb933905dd2d4eaacac94c19046744118703f51fd24b0e17970f43e6670ee879c7a85a121f8fd13e9ef4ee25aea7e2ba006810d20811e79ea9cedf6317d4629e WHIRLPOOL 35970403d55cfeb871e8955547c286017b6cdb2bce1a08d8716c4f5bb9017647f66876937613721dbab6ace57f545353e9482230360244ca21fee894dd95266f
-MISC ChangeLog 17040 SHA256 d65f94e9af0008f2afdc52b36dda819a630d7d9434c4f2b3ceb96b312bc59c80 SHA512 70380efbd6f011c11f7cad0852423e24202ed91cce4ab953c6606657cc35196af0f6948c6c552a99abdf26d0b7ad652021c43ed8aceda8b617a68750e5e418db WHIRLPOOL 143b89bddbe9496fdb465245dccb030daa977e1b928472792a333910e59eedaeff7e87d2b74911e7cfd564d932a4c5173e8f1307e69fed0e56866a3d2dd09ba0
+MISC ChangeLog 17218 SHA256 bd05a81a613cde1c7ac66155e88b48ce75a23af8473359bcb89f6918aac6f506 SHA512 2c804262d4c13caed68b9850d444ca382cb21801daadd11685a8f5e212f160c593350dc793466ba873382a84bd3363e299e5b6cb1ca082f8c21739c360dd82c6 WHIRLPOOL 03ba4a83e40eff72f0981a568f2cf28f051396401e668984c934c174c229fcc4e9193cf9daa137e58ae9b8fa38ca68dadcf71264df999a60453b0e5ce7d3d5e4
 MISC metadata.xml 157 SHA256 c3c089740b31ec0f4d7fbc3bf2d6bb8460ccfd0694f01bf91b22a2e1930d6d5d SHA512 eaa4f0b5e4f9173245bcb2158d56335c959e2b15571f9992efdcd89ab2375a771f6d06a8bde9aba369489bfe15c123abc2745ed93b7c3fd04af29b7262367040 WHIRLPOOL a5d0d7ac8ce5fe93f1a64440cb3cdb943c30d8deaa5a19e90d24917411bcb69c89d6f56bf5c84bb2604b42d9fd4211905c5c0d1f1710b936b41443b302cbff2c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlKLW2wACgkQcaHudmEf86qN8wCdGnIBmvmi/HZbba0E99S8xLnI
-YtMAnA+ReNd2hPXOhKkZZhvDIqVin3nK
-=f05k
+iQJ8BAEBCABmBQJTUSbsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
+MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAga5UP+gNK+LXT17n0ema351SxYGnc
+YTd1e86FzGOjaWw/nqqdam4uD75sm88xgdpwo7R0Z/HHxLqNiAiy1+6COjOJNqoC
+xVsak+VFGrYHyWF12Vu7R3ia6pIj+VxHn5WFBxDVnnvitYszkYEeTdoQwnLTSVWZ
+kp3YvouFhGBihli390e5fRB2v4ftWwJMbz4wGXEbBGlwKnXH/jx20NyTs5PVt2fU
+2yzky744NG7Jv58AasLJxiSOGT32EO/KQ4LC7QKjveuxhqls3jPp+zHfa7JqY4gw
+xx73Ksm9TPtm1uvYWyhR59wuZeXoZDpcm9Qmd9wXd+CkQoyY+rOOY8dmVSS4Le+J
+tdkCaSFCyLoga7xwQXNR5IRKDk4c4TquVmUBOSPWG99zNP8a5vQP3VZibYHwvqFI
+pBBiDLwhFGUXvuckliwk0s3Zt+9KY9w61b/tDsWRxosX/r1Ob7vJgJkVu6gv5aSP
+1IvWN9YPQhh+cetEmtBKZuEuZlOLi7FxpFQGVl8MXkMvCq+KjnsI5UY5ULjlyGNQ
+E9gLRuZqR0O/EwrRZWhsmxHLZ1J5jtD5f7ZqIf/Bh0ap6nY7rysHw6DBwINYumea
+WSDg7ZcobF4L8rvm5HyV6HHr6oTA/6wwixTgVvJeD9Ls+t87XdsPkLn6J68as+Aq
+5ymeb/AVmu/CYxSdiZoz
+=4uVX
 -----END PGP SIGNATURE-----
