@@ -1,6 +1,11 @@
 # ChangeLog for sys-libs/slang
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.134 2013/11/19 12:41:59 slyfox Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/slang/ChangeLog,v 1.135 2014/04/18 13:21:45 hasufell Exp $
+
+*slang-2.2.4-r1 (18 Apr 2014)
+
+  18 Apr 2014; Julian Ospald <hasufell@gentoo.org> +slang-2.2.4-r1.ebuild:
+  add multilib support wrt #496586, patch by Michael Mair-Keimberger
 
   19 Nov 2013; Sergei Trofimovich <slyfox@gentoo.org>
   +files/slang-2.2.4-memset.patch, slang-2.2.4.ebuild:
